--- a/maquetado/scss/styles.scss
+++ b/maquetado/scss/styles.scss
@@ -40,6 +40,7 @@
 }
 
 .redirect-arrow {
+  align-self: left;
   font-size: 20px;
   position: relative;
   transform: translateX(70%);
